Bug 1031632 - Make Map.prototype.set, WeakMap.prototype.set and Set.prototype.add chainable. r=till

--HG--
extra : rebase_source : 1365a1dc29464bf16e337317901f9c34b7bde256