js/src/jit-test/tests/collections/Map-delete.js
@@ -8,7 +8,7 @@ assertEq(m.delete(key), false);
 assertEq(m.has(key), false);
 
 // when the key is present
-assertEq(m.set(key, 'x'), undefined);
+assertEq(m.set(key, 'x'), m);
 assertEq(m.delete(key), true);
 assertEq(m.has(key), false);
 assertEq(m.get(key), undefined);
