js/src/jit-test/tests/collections/Set-scale.js
@@ -3,6 +3,6 @@
 var N = 1 << 16;
 var s = new Set;
 for (var i = 0; i < N; i++)
-    assertEq(s.add(i), undefined);
+    assertEq(s.add(i), s);
 for (var i = 0; i < N; i++)
     assertEq(s.has(i), true);
