js/src/tests/js1_8_5/extensions/regress-697515.js
@@ -1,6 +1,0 @@
-// Any copyright is dedicated to the Public Domain.
-// http://creativecommons.org/licenses/publicdomain/
-
-assertEq(new WeakMap().set({}, 0), undefined);
-
-reportCompare(0, 0, 'ok');
